2o commit: Linea base para cambios en index. Header y transform

--- a/index.html
+++ b/index.html
@@ -22,22 +22,33 @@
     </header>
     <main>
         <section class="mainSection">
+            <div class="mainSection__heroContainer">
                 <img class="hero" src="images/hero.jpg" alt="Imagen Principal">   
-            <h2>Un espacio para todas las mamás</h2>
-            <p>La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.
+            </div>
+            <div class="mainSection__text">
+                <h2>Un espacio para todas las mamás</h2>
+                <p>La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.
             </p>
+            </div>
 
         </section>    
         <section class="mainSection" id="ctaLinks">
             <div class="ctaLinks__container">
-                <h3 class="ctaLinks__firstTitle">About Me</h3>
-                <a href="pages/aboutMe.html"><img class="container__img" src="images/aboutImg.jpeg" alt="Fotografía About Me"></a>
-            
-                <h3>Blog</h3>
-                <a href="pages/blog.html"><img class="container__img" src="images/momTalesBlog.PNG" alt="Fotografía Blog"></a>
-            
-                <h3>Productos</h3>
-                <a href="pages/productos.html"> <img class="container__img" src="images/productosTazaYouGotThisMom.png" alt="Fotografía Productos"></a>
+                <div class="ctaLinks__wrapper">
+                    <h3 class="ctaLinks__firstTitle">About Me</h3>
+                    <a href="pages/aboutMe.html"><img class="container__img" src="images/aboutImg.jpeg" alt="Fotografía About Me"></a>
+                    <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
+                </div>
+                <div class="ctaLinks__wrapper">
+                    <h3>Blog</h3>
+                    <a href="pages/blog.html"><img class="container__img" src="images/momTalesBlog.PNG" alt="Fotografía Blog"></a>
+                    <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
+                </div>
+                <div class="ctaLinks__wrapper">
+                    <h3>Productos</h3>
+                    <a href="pages/productos.html"> <img class="container__img" src="images/productosTazaYouGotThisMom.png" alt="Fotografía Productos"></a>
+                    <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
+                </div>
             </div>
         </section>
         <section class="mainSection" id="recent"> 
