3er commit: Sitio responsive, con flexbox y grid en index y contacto.

--- a/index.html
+++ b/index.html
@@ -35,27 +35,29 @@
         <section class="mainSection" id="ctaLinks">
             <div class="ctaLinks__container">
                 <div class="ctaLinks__wrapper">
-                    <h3 class="ctaLinks__firstTitle">About Me</h3>
+                    <h3 class="ctaLinks__title">About Me</h3>
                     <a href="pages/aboutMe.html"><img class="container__img" src="images/aboutImg.jpeg" alt="Fotografía About Me"></a>
                     <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
                 </div>
                 <div class="ctaLinks__wrapper">
-                    <h3>Blog</h3>
+                    <h3 class="ctaLinks__title">Blog</h3>
                     <a href="pages/blog.html"><img class="container__img" src="images/momTalesBlog.PNG" alt="Fotografía Blog"></a>
                     <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
                 </div>
                 <div class="ctaLinks__wrapper">
-                    <h3>Productos</h3>
+                    <h3 class="ctaLinks__title">Productos</h3>
                     <a href="pages/productos.html"> <img class="container__img" src="images/productosTazaYouGotThisMom.png" alt="Fotografía Productos"></a>
                     <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
                 </div>
             </div>
         </section>
-        <section class="mainSection" id="recent"> 
-            <h3 class="recent__title">Lo más reciente:</h3> 
+        <section class="mainSection">
+            <div class="recent">
+                <h3 class="recent__title">Lo más reciente:</h3> 
                 <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="recent__img" src="images/igImg1.png" alt="Foto Instagram reciente"></a>
                 <a href="pages/blog.html"><img class="recent__img" src="images/bannerIMG.jpg" alt="Blog Post"></a>
                 <a href="pages/productos.html"><img class="recent__img" src="images/productosHoodie.jpg" alt="Tarros"></a>
+            </div>   
         </section>
     </main>
     <footer>
