--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -25,12 +25,19 @@
             <h2>About Me</h2>
         </section>
         <section class="mainSection">
-            <img class="hero" src="../images/aboutImg.jpeg" alt="Imagen About Me">
-            <p>¡Hola, bienvenida! soy Lily, soy diseñadora gráfica de profesión y escritora en entrenamiento. Jamás me había atrevido a hacerlo público… hasta que me convertí en mamá. </p>
-            <p>Cuando nació mi primera hija en el 2017, me sentía sola, creía que ser mamá iba a ser como en las películas “lo más hermoso de mi vida” y a las dos horas de estar solos en casa como papás primerizos, queríamos huir jajaja. </p>
-            <p>Abrí mi blog y comencé a escribir en el 2018, tratando de ser una amiga para mi, pensando en lo que a mi me hubiera gustado saber, lo que de verdad pasa por tu mente y no muchas se atreven a decirlo.</p> 
-            <p>You got this mom! es para darte un respiro, que no te sientas sola y que sepas que puedes con todo y más.</p>
-        </section>
+            <div class="aboutMe__container">
+                <div class="aboutMe__hero">
+                    <img class="hero" src="../images/aboutImg.jpeg" alt="Imagen About Me">
+                </div>
+                <div class="aboutMe__text">
+                    <p>¡Hola, bienvenida! soy Lily, soy diseñadora gráfica de profesión y escritora en entrenamiento. Jamás me había atrevido a hacerlo público… hasta que me convertí en mamá. </p>
+                    <p>Cuando nació mi primera hija en el 2017, me sentía sola, creía que ser mamá iba a ser como en las películas “lo más hermoso de mi vida” y a las dos horas de estar solos en casa como papás primerizos, queríamos huir jajaja. </p>
+                    <p>Abrí mi blog y comencé a escribir en el 2018, tratando de ser una amiga para mi, pensando en lo que a mi me hubiera gustado saber, lo que de verdad pasa por tu mente y no muchas se atreven a decirlo.</p> 
+                    <p>You got this mom! es para darte un respiro, que no te sientas sola y que sepas que puedes con todo y más.</p>
+                </div>
+                
+            </div>
+             </section>
     </main>
    
     <footer>
