Commit de Desafío: Agregué transiciones y transformaciones a botones, y limpié las ya existentes. Mejoré diseño responsive

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="mainSection">
-            <h2>About Me</h2>
+            <h2 class="aboutMe__title">About Me</h2>
         </section>
         <section class="mainSection">
             <div class="aboutMe__container">
