--- a/pages/blog.html
+++ b/pages/blog.html
@@ -22,47 +22,56 @@
     </header>
     <main>
         <section class="mainSection">
-            <h2>Blog</h2>
+            <h2 class="blogTitle">Blog</h2>
         </section>
-        <section class="mainSection" id="blog">
+        <section class="mainSection blogEntries">
            <div class="container">
-               <img class="container__img" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
+               <img class="container__img blog__img" src="../images/blogImg1.png" alt="Fotografía de la entrada al Blog">
                <h3 class="blogEntrada">Entrada de Blog</h3>
-               <p class="blogAutora"><i>Autora</i></p>
-               <p class="blogFecha"><i>Fecha</i></p>
-               <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
-           </div>
-           <div class="container">
-                <img class="container__img" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
-                <h3 class="blogEntrada">Entrada de Blog</h3>
+               <div class="blogDatos">
                 <p class="blogAutora"><i>Autora</i></p>
                 <p class="blogFecha"><i>Fecha</i></p>
+               </div>
+               <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
+           </div>
+           <div class="container reverse">
+                <img class="container__img blog__img" src="../images/blogEntryImg.png" alt="Fotografía de la entrada al Blog">
+                <h3 class="blogEntrada">Entrada de Blog</h3>
+                <div class="blogDatos">
+                    <p class="blogAutora"><i>Autora</i></p>
+                    <p class="blogFecha"><i>Fecha</i></p>
+                </div>
                 <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
             </div> 
         </section>
         <section class="mainSection" id="momTales">
-            <h2>Mom Tales</h2>
             <img class="momTales__img"src="../images/momTalesBlog.PNG" alt="Banner de Mom Tales">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro, provident dolore pariatur, nobis architecto aliquid nesciunt labore eveniet, eaque deserunt eius illo! Labore nihil deserunt assumenda, temporibus debitis necessitatibus rerum.</p>
             <div class="container">
-                <img class="container__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
+                <img class="container__img blog__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
                 <h3 class="blogEntrada">Entrada de Blog</h3>
-                <p class="blogAutora"><i>Autora</i></p>
-                <p class="blogFecha"><i>Fecha</i></p>
+                <div class="blogDatos">
+                    <p class="blogAutora"><i>Autora</i></p>
+                    <p class="blogFecha"><i>Fecha</i></p>
+                </div>
                 <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
             </div>
-            <div class="container">
-                <img class="container__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
+            <div class="container reverse">
+                <img class="container__img blog__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
                 <h3 class="blogEntrada">Entrada de Blog</h3>
-                <p class="blogAutora"><i>Autora</i></p>
-                <p class="blogFecha"><i>Fecha</i></p>
+                <div class="blogDatos">
+                    <p class="blogAutora"><i>Autora</i></p>
+                    <p class="blogFecha"><i>Fecha</i></p>
+                </div>
                 <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
                 </div>
             <div class="container">
-                <img class="container__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
+                <img class="container__img blog__img" src="../images/momTalesPost.png" alt="Fotografía de la entrada al Blog">
                 <h3 class="blogEntrada">Entrada de Blog</h3>
-                <p class="blogAutora"><i>Autora</i></p>
-                <p class="blogFecha"><i>Fecha</i></p>
+                <div class="blogDatos">
+                    <p class="blogAutora"><i>Autora</i></p>
+                    <p class="blogFecha"><i>Fecha</i></p>
+                </div>
                 <p class="blogPreview">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur beatae, omnis itaque id aspernatur facere nemo praesentium perspiciatis quae corrupti similique, nesciunt vel distinctio assumenda dolorum expedita cum. Repudiandae, asperiores voluptatum quae ad similique quasi cum mollitia odio obcaecati eius ipsum pariatur dolorem assumenda eveniet autem. Eius enim quasi nulla.</p>
         </section>
     </main>
