--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,25 +22,19 @@
     </header>
     <main>
         <section class="mainSection">
-            <h2>Contacto</h2>
-        </section>
-        <section class="mainSection">
             <img class="hero" src="../images/contactoBanner.png" alt="Banner Contacto">
         </section>
         <section class="mainSection">
             <div class="contactForm">
-                <h3 class="contactForm__title">Me encantaría saber de ti</h3>
-                <p class="contactForm__text">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
+                <div class="contactForm__wrapper">
+                    <h3 class="contactForm__title">Me encantaría saber de ti</h3>
+                    <p class="contactForm__text">¿Te gustaría escribir en mi blog? ¿Eres empresa y te gustaría colaborar? Escríbeme y pronto nos pondremos en contacto.</p>
+                </div>
                 <form action="" method="" enctype="text/plain">
-                    <fieldset>
-                        <legend>Déjame un mensaje</legend>
-                        <div class="contactData">
-                            <input class="inputText" type="name" placeholder="Nombre" required>
-                            <input class="inputText" type="email" placeholder="Correo Electrónico" required>
-                        </div>
-                        <div class="contactData">
+                    <fieldset class="gridForm">
+                        <input class="inputText" type="name" placeholder="Nombre" required>
+                        <input class="inputText" type="email" placeholder="Correo Electrónico" required>
                             <textarea name="msj" class="inputMsj" cols="44" rows="10" placeholder="Mensaje" required></textarea>
-                        </div>
                         <div class="contactSubmit">
                             <input class="btn" type="submit" value="Enviar">
                         </div>
