--- a/pages/productos.html
+++ b/pages/productos.html
@@ -22,42 +22,69 @@
     </header>
     <main>
         <section class="mainSection">
-            <h2>Productos</h2>
+            <h2 class="productosTitle">Productos</h2>
         </section>
-        <section class="mainSection">
-            <div class="container">
-                <img class="container__img" src="../images/productosHoodie.jpg" alt="Imagen Hoodie">
-                <h4>You Got This Mom - Hoodie</h4>
-                <h5>$500.00</h5>
+        <section class="mainSection productGrid">
+            <div class="producto">
+                <img class="container__img product__img" src="../images/productosHoodie.jpg" alt="Imagen Hoodie">
+                <div class="productData">
+                    <h4>You Got This Mom - Hoodie</h4>
+                    <h5>$500.00</h5>
+                    <div class="btn-products">
+                        <a class="btn-anchor" href="#">Ver Producto</a>
+                    </div>
+                </div>
             </div>
             <div class="producto">
-                <img class="container__img" src="../images/productosTarro.JPG" alt="Imagen Tarro">
-                <h4>You Got This Mom - Tarro</h4>
-                <h5>$350.00</h5>
+                <img class="container__img product__img" src="../images/productosTarro.JPG" alt="Imagen Tarro"> <!--Pedir imagen original para ratio de tamaño -->
+                <div class="productData">
+                    <h4>You Got This Mom - Tarro</h4>
+                    <h5>$350.00</h5>
+                    <div class="btn-products">
+                        <a class="btn-anchor" href="#">Ver Producto</a>
+                    </div>
+                </div>
             </div>
             <div class="producto">
-                <img class="container__img" src="../images/productosMotherhood.png" alt="Imagen T-Shirt Motherhood is powerful">
-                <h4>Motherhood is Powerful - T-Shirt</h4>
-                <h5>$300.00</h5>
+                <img class="container__img product__img" src="../images/productosMotherhood.png" alt="Imagen T-Shirt Motherhood is powerful">
+                <div class="productData">
+                    <h4>Motherhood is Powerful - T-Shirt</h4>
+                    <h5>$300.00</h5>
+                    <div class="btn-products">
+                        <a class="btn-anchor" href="#">Ver Producto</a>
+                    </div>
+                </div>
             </div>
             <div class="producto">
-                <img class="container__img" src="../images/productosYouGotThisMom.png" alt="Imagen T-Shirt You Got This Mom">
-                <h4>You Got This Mom - T-Shirt</h4>
-                <h5>$300.00</h5>
+                <img class="container__img product__img" src="../images/productosYouGotThisMom.png" alt="Imagen T-Shirt You Got This Mom">
+                <div class="productData">
+                    <h4>You Got This Mom - T-Shirt</h4>
+                    <h5>$300.00</h5>
+                    <div class="btn-products">
+                        <a class="btn-anchor" href="#">Ver Producto</a>
+                    </div>
+                </div>
             </div>
             <div class="producto">
-                <img class="container__img" src="../images/productosTazaYouGotThisMom.png" alt="Imagen Taza You Got This Mom">
-                <h4>You Got This Mom - Taza</h4>
-                <h5>$400.00</h5>
+                <img class="container__img product__img" src="../images/productosTazaYouGotThisMom.png" alt="Imagen Taza You Got This Mom">
+                <div class="productData">
+                    <h4>You Got This Mom - Taza</h4>
+                    <h5>$400.00</h5>
+                    <div class="btn-products">
+                        <a class="btn-anchor" href="#">Ver Producto</a>
+                    </div>
+                </div>
             </div>
             <div class="producto">
-                <img class="container__img" src="../images/productosTazaYouGotThisDad.png" alt="Imagen Taza You Got This Dad">
-                <h4>You Got This Dad - Taza</h4>
-                <h5>$400.00</h5>
+                <img class="container__img product__img" src="../images/productosTazaYouGotThisDad.png" alt="Imagen Taza You Got This Dad">
+                <div class="productData">
+                    <h4>You Got This Dad - Taza</h4>
+                    <h5>$400.00</h5>
+                    <div class="btn-products">
+                        <a class="btn-anchor" href="#">Ver Producto</a>
+                    </div>
+                </div>
             </div>
-        </section>
-        <section class="sideSection">
-            <a  href="#">Ir a tienda en línea</a>
         </section>
     </main>
    
