--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,66 +11,130 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="images/LogoYGTM.jpeg" alt="Logo You Got This Mom"></a>
-        <nav class="navBar">
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="pages/aboutMe.html">About Me</a></li>
-                <li><a href="pages/blog.html">Blog</a></li>
-                <li><a href="pages/productos.html">Productos</a></li>
-                <li><a href="pages/contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="index.html">
+                  <img src="images/LogoYGTM.jpeg" alt="You Got This Mom" width="50" height="50" class="d-inline-block align-text-top"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+                  <a class="nav-link" href="pages/aboutMe.html">About Me</a>
+                  <a class="nav-link" href="pages/blog.html">Blog</a>
+                  <a class="nav-link" href="pages/productos.html">Productos</a>
+                  <a class="nav-link" href="pages/contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
-        <section class="mainSection">
-            <div class="mainSection__heroContainer">
-                <img class="hero" src="images/hero.jpg" alt="Imagen Principal">   
+        <section>
+            <div class="container-fluid">
+                <div class="row">
+                    <img class="w-100 p-0" src="images/hero.jpg" alt="Imagen Principal">   
+                </div>
             </div>
-            <div class="mainSection__text">
-                <h2>Un espacio para todas las mamás</h2>
-                <p>La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.
-            </p>
+            <div class="container mb-5">
+                <div class="row">
+                    <div class="col-12">
+                        <h2 class="text-uppercase mt-5">Un espacio para todas las mamás</h2>
+                        <p class="lead m-3">La maternidad es única. Cada quién vive una historia diferente, pero entre todas nos podemos entender, enriquecer y apoyar porque este... es un camino para toda la vida.
+                        </p>
+                    </div>
+                </div>
             </div>
-
         </section>    
-        <section class="mainSection" id="ctaLinks">
-            <div class="ctaLinks__container">
-                <div class="ctaLinks__wrapper">
-                    <h3 class="ctaLinks__title">About Me</h3>
-                    <a href="pages/aboutMe.html"><img class="container__img" src="images/aboutImg.jpeg" alt="Fotografía About Me"></a>
-                    <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
-                </div>
-                <div class="ctaLinks__wrapper">
-                    <h3 class="ctaLinks__title">Blog</h3>
-                    <a href="pages/blog.html"><img class="container__img" src="images/momTalesBlog.PNG" alt="Fotografía Blog"></a>
-                    <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
-                </div>
-                <div class="ctaLinks__wrapper">
-                    <h3 class="ctaLinks__title">Productos</h3>
-                    <a href="pages/productos.html"> <img class="container__img" src="images/productosTazaYouGotThisMom.png" alt="Fotografía Productos"></a>
-                    <p class="ctaLinks__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod mollitia reprehenderit cumque. Placeat laboriosam laborum, assumenda magni quibusdam illo, veniam deserunt autem hic fugiat qui fugit exercitationem atque nesciunt, corporis porro sequi officia officiis ipsa ea nam explicabo necessitatibus excepturi nisi.</p>
+        <section class="clr-darkpurple">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm col-md-4">
+                        <h3 class="p-4">About Me</h3>
+                        <a class href="pages/aboutMe.html"><img class="w-100 p-0 hover" src="images/aboutImg.jpeg" alt="Fotografía About Me"></a>
+                        <p class="ctaLinks__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eaque consequuntur totam odit fugit, maiores cumque at voluptatum aliquam eveniet.</p>
+                    </div>
+                    <div class="col-sm col-md-4">
+                        <h3 class="p-4">Blog</h3>
+                        <a href="pages/blog.html"><img class="w-100 p-0 hover" src="images/momTalesBlog.PNG" alt="Fotografía Blog"></a>
+                        <p class="ctaLinks__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eaque consequuntur totam odit fugit, maiores cumque at voluptatum aliquam eveniet.</p>
+                    </div>
+                    <div class="col-sm col-md-4">
+                        <h3 class="p-4">Productos</h3>
+                        <a href="pages/productos.html"> <img class="w-100 p-0 hover" src="images/productosTazaYouGotThisMom.png" alt="Fotografía Productos"></a>
+                        <p class="ctaLinks__text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Excepturi eaque consequuntur totam odit fugit, maiores cumque at voluptatum aliquam eveniet.</p>
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="mainSection">
-            <div class="recent">
-                <h3 class="recent__title">Lo más reciente:</h3> 
-                <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="recent__img" src="images/igImg1.png" alt="Foto Instagram reciente"></a>
-                <a href="pages/blog.html"><img class="recent__img" src="images/bannerIMG.jpg" alt="Blog Post"></a>
-                <a href="pages/productos.html"><img class="recent__img" src="images/productosHoodie.jpg" alt="Tarros"></a>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <h2 class="mt-5">Lo más reciente:</h2>
+                </div>
+            </div>
+        </div>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-12 p-0">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/igImg1.png" class="d-block w-100 img-carrousel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>¡Nuevo Post en IG!</h5>
+                              <p>¿Por qué a veces nos cuesta tanto reconocer nuestras emociones?</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/aboutImg.jpeg" class="d-block w-100 img-carrousel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>Nueva entrada de blog</h5>
+                              <p>¿Planear para todo? Mejor pensar en aceptar la situación y trabajar de ahí.</p>
+                            </div>
+                          </div>
+                          <div class="carousel-item">
+                            <img src="images/productosHoodie.jpg" class="d-block w-100 img-carrousel" alt="...">
+                            <div class="carousel-caption d-none d-md-block">
+                              <h5>¡Nuevo Producto en tienda!</h5>
+                              <p>Con la temporada de invierno, ¿Por qué no comprar una hoodie?</p>
+                            </div>
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
+                </div>
             </div>   
         </section>
     </main>
     <footer>
-        <div class="social">
-            <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="socialLogos" src="images/instagramLogo.png" alt="instagramSVG"></a>
-            <span>@yougotthis_mom</span>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 col-sm-12 p-0 mt-4">
+                    <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="img-social" src="images/instagramLogo.png" alt="instagramSVG"> <span class="social-text">@yougotthis_mom</span></a>
+                </div>
+                <div class="col-md-4 offset-md-4 mt-4">
+                    <img src="images/firma.png" alt="Firma 'Con cariño, Lily'">
+                </div>
+                <div class="col-md-12 p-0 m-0">
+                    <p class="derechos mt-0 mb-3">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
+                </div>
+            </div>
         </div>
-        <div class="firma">
-            <img src="images/firma.png" alt="Firma 'Con cariño, Lily'">
-        </div>
-        <p class="derechos">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
     </footer>
+    <script src="js/bootstrap.js"></script>
 </body>
 </html>
