--- a/pages/blog.html
+++ b/pages/blog.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="stylesheet" href="../css/bootstrap-grid.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +11,24 @@
 </head>
 <body>
     <header>
-        <a href="../index.html"><img class="logo" src="../images/LogoYGTM.jpeg" alt="Logo You Got This Mom"></a>
-        <nav class="navBar">
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="aboutMe.html">About Me</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="../index.html">
+                  <img src="/images/LogoYGTM.jpeg" alt="You Got This Mom" width="50" height="50" class="d-inline-block align-text-top"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link" href="/index.html">Inicio</a>
+                  <a class="nav-link" href="aboutMe.html">About Me</a>
+                  <a class="nav-link active" aria-current="page" href="blog.html">Blog</a>
+                  <a class="nav-link" href="productos.html">Productos</a>
+                  <a class="nav-link" href="contacto.html">Contacto</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <section class="mainSection">
