commit de Desafio: 2 paginas armadas con bootstrap

--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -31,34 +31,26 @@
           </nav>
     </header>
     <main>
-       <div class="container-fluid">
-           
-       </div>
-            <h2 class="aboutMe__title">About Me</h2>
-        </section>
-        <section class="mainSection">
-            <div class="aboutMe__container">
-                <div class="aboutMe__hero">
-                    <img class="hero" src="../images/aboutImg.jpeg" alt="Imagen About Me">
-                </div>
-                <div class="aboutMe__text">
-                    <p>¡Hola, bienvenida! soy Lily, soy diseñadora gráfica de profesión y escritora en entrenamiento. Jamás me había atrevido a hacerlo público… hasta que me convertí en mamá. </p>
-                    <p>Cuando nació mi primera hija en el 2017, me sentía sola, creía que ser mamá iba a ser como en las películas “lo más hermoso de mi vida” y a las dos horas de estar solos en casa como papás primerizos, queríamos huir jajaja. </p>
-                    <p>Abrí mi blog y comencé a escribir en el 2018, tratando de ser una amiga para mi, pensando en lo que a mi me hubiera gustado saber, lo que de verdad pasa por tu mente y no muchas se atreven a decirlo.</p> 
-                    <p>You got this mom! es para darte un respiro, que no te sientas sola y que sepas que puedes con todo y más.</p>
-                </div>
-                
+        <div class="d-flex flex-column flex-lg-row align-content-center justify-content-center pt-5">
+            <img class="flex-grow-0 cover align-self-center img-size" src="../images/aboutImg.jpeg" alt="Imagen About Me">
+            <div class="p-4 mt-5 align-self-center flex-grow-1">
+                <h2 class="text-white fw-bold mt-5">About Me</h2>
+                <p>¡Hola, bienvenida! soy Lily, soy diseñadora gráfica de profesión y escritora en entrenamiento. Jamás me había atrevido a hacerlo público… hasta que me convertí en mamá. </p>
+                <p>Cuando nació mi primera hija en el 2017, me sentía sola, creía que ser mamá iba a ser como en las películas “lo más hermoso de mi vida” y a las dos horas de estar solos en casa como papás primerizos, queríamos huir jajaja. </p>
+                <p>Abrí mi blog y comencé a escribir en el 2018, tratando de ser una amiga para mi, pensando en lo que a mi me hubiera gustado saber, lo que de verdad pasa por tu mente y no muchas se atreven a decirlo.</p> 
+                <p>You got this mom! es para darte un respiro, que no te sientas sola y que sepas que puedes con todo y más.</p>
             </div>
-             </section>
+        </div>
+
     </main>
     <footer>
         <div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-12 p-0 mt-4">
-                    <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="img-social" src="images/instagramLogo.png" alt="instagramSVG"> <span class="social-text">@yougotthis_mom</span></a>
+                    <a href="https://www.instagram.com/yougotthis_mom/" target="_blank"><img class="img-social" src="../images/instagramLogo.png" alt="instagramSVG"> <span class="social-text">@yougotthis_mom</span></a>
                 </div>
                 <div class="col-md-4 offset-md-4 mt-4">
-                    <img src="images/firma.png" alt="Firma 'Con cariño, Lily'">
+                    <img src="../images/firma.png" alt="Firma 'Con cariño, Lily'">
                 </div>
                 <div class="col-md-12 p-0 m-0">
                     <p class="derechos mt-0 mb-3">© 2021 YOU GOT THIS MOM. Todos los Derechos Reservados</p>
