--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -14,13 +14,13 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-white">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
-                  <img src="/images/LogoYGTM.jpeg" alt="You Got This Mom" width="50" height="50" class="d-inline-block align-text-top"></a>
+                  <img src="../images/LogoYGTM.jpeg" alt="You Got This Mom" width="50" height="50" class="d-inline-block align-text-top"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link" href="/index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html">Inicio</a>
                   <a class="nav-link active" aria-current="page" href="aboutMe.html">About Me</a>
                   <a class="nav-link" href="blog.html">Blog</a>
                   <a class="nav-link" href="productos.html">Productos</a>
